# TubeBench

./: .claudeignore  .env.example  .gitignore  TubeBench 실행.command  app.py  main.py  pyproject.toml  render.yaml  requirements.txt  server.py
api/: channel.py  competitor.py  copywriter.py  history_api.py  keyword.py  planner.py  system_api.py  trend.py
core/: __init__.py  ai_router.py  ai_stream.py  api_handler.py  history.py  key_manager.py
history/ai_planner/: 20260425_214540.json
history/channel_analyzer/: 20260425_211555.json
history/copywriter/: 20260425_210238.json
history/trend_planner/: 20260425_210647.json
modules/: __init__.py  channel_analyzer.py  channel_profiles.py  competitor_bench.py  copywriter.py  keyword_analyzer.py  planner.py  trend_planner.py
profiles/: UCz3OnW4YamJp6xxrl9cS_Fg.json
static/: app.js  index.html  style.css
